force-app/main/default/objects/Assignment_Log__c/Assignment_Log__c.object-meta.xml
<CustomObject>
    <label>Assignment Log</label>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Assignmen Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>