force-app/main/default/objects/Assignment_Log__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Assignment Log</relationshipLabel>
    <relationshipName>Assignment_Log</relationshipName>
    <type>Lookup</type>
</CustomField>