force-app/main/default/objects/Assignment_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Assignment Log</relationshipLabel>
    <relationshipName>Assignment_Log</relationshipName>
    <type>Lookup</type>
</CustomField>