force-app/main/default/objects/Assignment_Log__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Team Member</label>
    <referenceTo>Team_Member__c</referenceTo>
    <relationshipLabel>Assignment Log</relationshipLabel>
    <relationshipName>Assignment_Log</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>